# syntaxe-converter-1

./: .gitignore  Note.md  README.md  dune  dune-project  ltrace_output.txt  meta-grammar-template.yaml  meta-grammar.yaml  output.g4  output.js  output.jsclear  output2.g4  output3.g4  output3.js  package-lock.json  package.json  strace_output.txt  syntaxe-converter.opam  syntaxe_converter.ml
.antlr/: Java8ParserLexer.interp  Java8ParserLexer.java  testLexer.interp  testLexer.java
logs/: 2025-06-18-13.yml  2025-06-18-15-13.json  2025-06-18-15-34.json  2025-06-23-22-47.json  2025-06-26-10-46.json  2025-06-26-11-04.json  2025-06-26-11-08.json  2025-06-26-11-13.json  2025-06-26-11-36.json  2025-06-26-13-52.json  2025-07-01-08-17.json  2025-07-01-08-18.json  2025-07-01-10-29.json  2025-07-01-10-48.json  2025-07-01-10-57.json  2025-07-01-11-07.json  2025-07-01-11-08.json  2025-07-01-12-15.json  2025-07-01-13-31.json  2025-07-01-13-45.json  2025-07-01-13-51.json  2025-07-01-13-54.json  2025-07-01-15-01.json  2025-07-01-15-03.json  2025-07-01-15-12.json  2025-07-03-11-33.json  README
meta-grammar-templates-archive/: abstractGrammar.drawio  meta-grammar-template.yaml  meta-grammar-template2.xml
src/: dune  main.ml
src/from_syntax/: dune  from_syntax.ml  from_syntax.mli  logic.ml
src/from_syntax/tree_sitter/: dune  tree_sitter.ml  tree_sitter_lexer.mll  tree_sitter_parser.mly  tree_sitter_types.ml  tree_sitter_types.mli  ts.ml  ts_lexer.mll  ts_parser.mly  ts_types.ml
src/to_syntax/: dune  (+4 more)
tests/: Java8Parser.g4  Java8ParserModified.g4  grammar-JS.js  grammar-Java.js  grammar.js  mini-test.js  package-lock.json  test-grammar.js  test.g4
(+24 files in other folders)
