opam-version: "2.0"
name: "syntaxe-converter"
version: "0.1"
authors: ["Anton"]
maintainer: "anton@example.com"
homepage: "https://example.com/syntaxe-converter"
dev-repo: "git+https://example.com/syntaxe-converter.git"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
dependencies: [
  "ocaml" {>= "4.12.0"}
  "dune" {>= "3.0"}
  "menhir"
]