(menhir
 (modules tree_sitter_parser))

(ocamllex
 (modules tree_sitter_lexer))

(library
 (name from_syntax_tree_sitter)
  (preprocess (pps ppx_deriving_yojson))
 (public_name syntaxe-converter.from_syntax.tree_sitter)
 (modules tree_sitter_types tree_sitter_parser tree_sitter_lexer tree_sitter)
 (libraries menhirLib))
